--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ app/__pycache__/
 app/api/v1/__pycache__/
 app/api/v1/endpoints/__pycache__/
 app/core/__pycache__/
+app/crud/__pycache__/
+app/schemas/__pycache__/
